WIP: use testcontainers and jooq with jpa